--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,44 @@
 	margin-right:2%;
 	width:95%;
 }
+.blog{}
+.blog article{
+	display:block;
+	margin:0px;
+	padding:0px;
+	width:100%;
+	border-bottom:1px solid grey;
+	margin-top:5px;
+	margin-bottom:5px;
+	padding-top:5px;
+	padding-bottom:5px;
+}
+.blog h1{
+	text-align:center;	
+}
+.btn_buscar{
+	position:absolute;
+	top:150px;
+	left:24px;
+	padding:10px;
+	border:2px solid grey;
+	border-radius:10px;
+	background:#fff;
+	cursor:pointer;
+}
+.buscar_mapa{
+	position:absolute;
+	width:100%;
+	height:90%;
+	top:50px;
+	background-color: rgba(255,255,255,0.3);
+	padding:5px;
+}
+.buscar_mapa input{
+	width:100%;
+	height:25px;
+	display:inline;
+	background-color: rgb(255,255,255); opacity: 1;
+}
+.buscar_mapa button{	
+}
