--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,15 @@
-#map_canvas{
-	width:95%;
-	width:95%;
-}
-#drame_cro{
-	margin-left:2%;
-	margin-right:2%;
-	width:95%;
-}
-.blog{}
-.blog article{
-	display:block;
-	margin:0px;
-	padding:0px;
-	width:100%;
-	border-bottom:1px solid grey;
-	margin-top:5px;
-	margin-bottom:5px;
-	padding-top:5px;
-	padding-bottom:5px;
-}
-.blog h1{
-	text-align:center;	
-}
+
+
 .btn_buscar{
 	position:absolute;
-	top:150px;
-	left:24px;
+	top:66px;
+	left:75px;
 	padding:10px;
 	border:2px solid grey;
 	border-radius:10px;
 	background:#fff;
 	cursor:pointer;
+	z-index:99;
 }
 .buscar_mapa{
 	position:absolute;
@@ -39,12 +18,21 @@
 	top:50px;
 	background-color: rgba(255,255,255,0.3);
 	padding:5px;
+	z-index:999;
 }
 .buscar_mapa input{
-	width:100%;
+	width:99%;
 	height:25px;
-	display:inline;
+	display:block;
 	background-color: rgb(255,255,255); opacity: 1;
 }
-.buscar_mapa button{	
+.buscar_mapa a{
+	width:99%;
+	height:25px;
+	text-align:center;
+	display:block;
+	text-decoration:none;
+	color:#000;
+	background:#FFFFFF;
+	padding:5px;
 }
