--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,275 +1,275 @@
 .main,
 .container > header {
-	width: 95%;
-	max-width: 69em;
-	margin: 0 auto;
-	padding: 0 1.875em 3.125em;
+	width: 95% !important;
+	max-width: 69em !important;
+	margin: 0 auto !important;
+	padding: 0 1.875em 3.125em !important;
 }
 
 .container > header {
-	padding: 2.875em 1.875em 1.875em;
+	padding: 2.875em 1.875em 1.875em !important;
 }
 
 .container > header h1 {
-	font-size: 2.125em;
-	line-height: 1.3;
-	margin: 0;
-	float: left;
-	font-weight: 400;
+	font-size: 2.125em !important;
+	line-height: 1.3 !important;
+	margin: 0 !important;
+	float: left !important;
+	font-weight: 400 !important;
 }
 
 .container > header span {
-	display: block;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 0.5em;
-	padding: 0 0 0.6em 0.1em;
+	display: block !important;
+	font-weight: 700 !important;
+	text-transform: uppercase !important;
+	letter-spacing: 0.5em !important;
+	padding: 0 0 0.6em 0.1em !important;
 }
 
 .container > header nav {
-	float: right;
+	float: right !important;
 }
 
 .container > header nav a {
-	display: block;
-	float: left;
-	position: relative;
-	width: 2.5em;
-	height: 2.5em;
-	background: #ccc;
-	border-radius: 50%;
-	color: transparent;
-	margin: 0 0.1em;
-	border: 4px solid #fc683f;
-	text-indent: -8000px;
+	display: block !important;
+	float: left !important;
+	position: relative !important;
+	width: 2.5em !important;
+	height: 2.5em !important;
+	background: #ccc !important;
+	border-radius: 50% !important;
+	color: transparent !important;
+	margin: 0 0.1em !important;
+	border: 4px solid #fc683f !important;
+	text-indent: -8000px !important;
 }
 
 .container > header nav a:after {
-	content: attr(data-info);
-	color: #fc683f;
-	position: absolute;
-	width: 600%;
-	top: 120%;
-	text-align: right;
-	right: 0;
-	opacity: 0;
-	pointer-events: none;
+	content: attr(data-info) !important;
+	color: #fc683f !important;
+	position: absolute !important;
+	width: 600% !important;
+	top: 120% !important;
+	text-align: right !important;
+	right: 0 !important;
+	opacity: 0 !important;
+	pointer-events: none !important;
 }
 
 .container > header nav a:hover:after {
-	opacity: 1;
+	opacity: 1 !important;
 }
 
 .container > header nav a:hover {
-	background: #fc683f;
+	background: #fc683f !important;
 }
 
 .icon-drop:before, 
 .icon-arrow-left:before {
-	font-family: 'fontawesome';
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	line-height: 2;
-	text-align: center;
-	color: #fc683f;
-	-webkit-font-smoothing: antialiased;
-	text-indent: 8000px;
-	padding-left: 8px;
+	font-family: 'fontawesome' !important;
+	position: absolute !important;
+	top: 0 !important;
+	width: 100% !important;
+	height: 100% !important;
+	speak: none !important;
+	font-style: normal !important;
+	font-weight: normal !important;
+	line-height: 2 !important;
+	text-align: center !important;
+	color: #fc683f !important;
+	-webkit-font-smoothing: antialiased !important;
+	text-indent: 8000px !important;
+	padding-left: 8px !important;
 }
 
 .container > header nav a:hover:before {
-	color: #ccc;
+	color: #ccc !important;
 }
 
 .icon-drop:before {
-	content: "\e000";
+	content: "\e000" !important;
 }
 
 .icon-arrow-left:before {
-	content: "\f060";
+	content: "\f060" !important;
 }
 
 
 .cbp_tmtimeline {
-	margin: 30px 0 0 0;
-	padding: 0;
-	list-style: none;
-	position: relative;
+	margin: 30px 0 0 0 !important;
+	padding: 0 !important;
+	list-style: none !important;
+	position: relative !important;
 } 
 
 /* The line */
 .cbp_tmtimeline:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	width: 10px;
-	background: #ccc;
-	left: 20%;
-	margin-left: -10px;
+	content: '' !important;
+	position: absolute !important;
+	top: 0 !important;
+	bottom: 0 !important;
+	width: 10px !important;
+	background: #ccc !important;
+	left: 20% !important;
+	margin-left: -10px !important;
 }
 
 /* The date/time */
 .cbp_tmtimeline > li .cbp_tmtime {
-	display: block;
-	width: 25%;
-	padding-right: 100px;
-	position: absolute;
+	display: block !important;
+	width: 12% !important;
+	padding-right: 100px !important;
+	position: absolute !important;
 }
 
 .cbp_tmtimeline > li .cbp_tmtime span {
-	display: block;
-	text-align: right;
+	display: block !important;
+	text-align: right !important;
 }
 
 .cbp_tmtimeline > li .cbp_tmtime span:first-child {
-	font-size: 0.9em;
-	color: #999;
+	font-size: 0.9em !important;
+	color: #999 !important;
 }
 
 .cbp_tmtimeline > li .cbp_tmtime span:last-child {
-	font-size: 2.9em;
-	color: #ccc;
+	font-size: 2.9em !important;
+	color: #ccc !important;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmtime span:last-child {
-	color: #ccc;
+	color: #ccc !important;
 }
 
 /* Right content */
 .cbp_tmtimeline > li .cbp_tmlabel {
-	margin: 0 0 15px 25%;
-	background: #fc683f;
-	color: #ccc;
-	padding: 2em;
-	font-size: 1.2em;
-	font-weight: 300;
-	line-height: 1.4;
-	position: relative;
-	border-radius: 5px;
+	margin: 0 0 15px 25% !important;
+	background: #fc683f !important;
+	color: #ccc !important;
+	padding: 2em !important;
+	font-size: 1.2em !important;
+	font-weight: 300 !important;
+	line-height: 1.4 !important;
+	position: relative !important;
+	border-radius: 5px !important;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
-	background: #fc683f;
+	background: #fc683f !important;
 }
 
 .cbp_tmtimeline > li .cbp_tmlabel h2 { 
-	margin-top: 0px;
-	padding: 0 0 10px 0;
-	border-bottom: 1px solid rgba(255,255,255,0.4);
+	margin-top: 0px !important;
+	padding: 0 0 10px 0 !important;
+	border-bottom: 1px solid rgba(255,255,255,0.4) !important;
 }
 
 /* The triangle */
 .cbp_tmtimeline > li .cbp_tmlabel:after {
-	right: 100%;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-	border-right-color: #fc683f;
-	border-width: 10px;
-	top: 10px;
+	right: 100% !important;
+	border: solid transparent !important;
+	content: " " !important;
+	height: 0 !important;
+	width: 0 !important;
+	position: absolute !important;
+	pointer-events: none !important;
+	border-right-color: #fc683f !important;
+	border-width: 10px !important;
+	top: 10px !important;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
-	border-right-color: #fc683f;
+	border-right-color: #fc683f !important;
 }
 
 /* The icons */
 .cbp_tmtimeline > li .cbp_tmicon {
-	width: 40px;
-	height: 40px;
-	font-family: 'ecoico';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	font-size: 1.4em;
-	line-height: 40px;
-	-webkit-font-smoothing: antialiased;
-	position: absolute;
-	color: #ccc;
-	background: #999;
-	border-radius: 50%;
-	box-shadow: 0 0 0 8px #ccc;
-	text-align: center;
-	left: 20%;
-	top: 0;
-	margin: 0 0 0 -25px;
+	width: 40px !important;
+	height: 40px !important;
+	font-family: 'ecoico' !important;
+	speak: none !important;
+	font-style: normal !important;
+	font-weight: normal !important;
+	font-variant: normal !important;
+	text-transform: none !important;
+	font-size: 1.4em !important;
+	line-height: 40px !important;
+	-webkit-font-smoothing: antialiased !important;
+	position: absolute !important;
+	color: #716460 !important;
+	background: #B9ADA7 !important;
+	border-radius: 50% !important;
+	box-shadow: 0 0 0 8px #ccc !important;
+	text-align: center !important;
+	left: 20% !important;
+	top: 8px !important;
+	margin: 0 0 0 -25px !important;
 }
 
 .cbp_tmicon-phone:before {
-	content: "\e000";
+	content: "\e000" !important;
 }
 
 .cbp_tmicon-screen:before {
-	content: "\e001";
+	content: "\e001" !important;
 }
 
 .cbp_tmicon-mail:before {
-	content: "\e002";
+	content: "\e002" !important;
 }
 
 .cbp_tmicon-earth:before {
-	content: "\e003";
+	content: "\e003" !important;
 }
 
 /* Example Media Queries */
 @media screen and (max-width: 65.375em) {
 
 	.cbp_tmtimeline > li .cbp_tmtime span:last-child {
-		font-size: 1.5em;
+		font-size: 1.5em !important;
 	}
 }
 
 @media screen and (max-width: 47.2em) {
 	.cbp_tmtimeline:before {
-		display: none;
+		display: none !important;
 	}
 
 	.cbp_tmtimeline > li .cbp_tmtime {
-		width: 100%;
-		position: relative;
-		padding: 0 0 20px 0;
+		width: 100% !important;
+		position: relative !important;
+		padding: 0 0 20px 0 !important;
 	}
 
 	.cbp_tmtimeline > li .cbp_tmtime span {
-		text-align: left;
+		text-align: left !important;
 	}
 
 	.cbp_tmtimeline > li .cbp_tmlabel {
-		margin: 0 0 30px 0;
-		padding: 1em;
-		font-weight: 400;
-		font-size: 95%;
+		margin: 0 0 30px 0 !important;
+		padding: 1em !important;
+		font-weight: 400 !important;
+		font-size: 95% !important;
 	}
 
 	.cbp_tmtimeline > li .cbp_tmlabel:after {
-		right: auto;
-		left: 20px;
-		border-right-color: transparent;
-		border-bottom-color: #fc683f;
-		top: -20px;
+		right: auto !important;
+		left: 20px !important;
+		border-right-color: transparent !important;
+		border-bottom-color: #fc683f !important;
+		top: -20px !important;
 	}
 
 	.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
-		border-right-color: transparent;
-		border-bottom-color: #fc683f;
+		border-right-color: transparent !important;
+		border-bottom-color: #fc683f !important;
 	}
 
 	.cbp_tmtimeline > li .cbp_tmicon {
-		position: relative;
-		float: right;
-		left: auto;
-		margin: -55px 5px 0 0px;
+		position: relative !important;
+		float: right !important;
+		left: auto !important;
+		margin: -62px 5px 0 0px !important;
 	}	
 }
 
