--- a/css/timeline.css
+++ b/css/timeline.css
@@ -96,6 +96,7 @@
 
 
 .cbp_tmtimeline {
+	
 	margin: 30px 0 0 0 !important;
 	padding: 0 !important;
 	list-style: none !important;
@@ -113,9 +114,12 @@
 	left: 20% !important;
 	margin-left: -10px !important;
 }
-
+.cbp_tmtimeline li{
+border-top:0px solid #fff !important;
+}
 /* The date/time */
 .cbp_tmtimeline > li .cbp_tmtime {
+	border-top:1px solid #fff !important;
 	display: block !important;
 	width: 12% !important;
 	padding-right: 100px !important;
@@ -145,7 +149,7 @@
 .cbp_tmtimeline > li .cbp_tmlabel {
 	margin: 0 0 15px 25% !important;
 	background: #fc683f !important;
-	color: #ccc !important;
+	color: #fff !important;
 	padding: 2em !important;
 	font-size: 1.2em !important;
 	font-weight: 300 !important;
