--- a/js/frame/themes/css/innsbruck.css
+++ b/js/frame/themes/css/innsbruck.css
@@ -1522,8 +1522,8 @@ body {
 }
 /* line 251, ../../../themes/scss/include/_skeleton.scss */
 #jqt ul li {
-  border-top: 1px solid #f2f2f2;
-  list-style-type: none;
+  /*border-top: 1px solid #f2f2f2;
+  */list-style-type: none;
   overflow: hidden;
   padding: 10px;
   -webkit-transform: translate3d(0, 0, 0);
